--- a/package.json
+++ b/package.json
@@ -1,47 +1,33 @@
 {
   "name": "carbid-backend",
   "version": "1.0.0",
-  "description": "Backend para sistema de subastas CarBid",
-  "main": "server.js",
+  "description": "CarBid Backend API",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "auction",
-    "cars",
-    "backend"
-  ],
-  "author": "",
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
+  "keywords": ["auction", "cars", "api"],
+  "author": "Tu Nombre",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.478.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "express-validator": "^7.3.0",
-    "helmet": "^7.2.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.1",
-    "multer": "^2.0.2",
-    "mysql2": "^3.15.3",
-    "socket.io": "^4.8.1"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.5"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.10",
-    "supertest": "^6.3.4"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  },
-  "directories": {
-    "test": "tests"
-  },
-  "type": "commonjs"
+    "nodemon": "^3.0.2"
+  }
 }
